# StudentInfoSystem

./: CMakeLists.txt  LICENSE  README.md
include/: course_view.h  grade_view.h  student_info_system.h  student_view.h  user_view.h  util.h
include/student_info_system/: base.h  course.h  grade.h  init.h  student.h  types.h  user.h  util.h
src/: CMakeLists.txt  course_view.c  grade_view.c  main.c  student_view.c  user_view.c  util.c
src/student_info_system/: base.c  course.c  grade.c  init.c  student.c  user.c  util.c
